kubernetes/cestaky.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cestaky-deployment
  labels:
    app: cestaky
  annotations:
    # Triggered by registry webhook, polling is a fallback.
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 10m"
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: cestaky
  template:
    metadata:
      labels:
        app: cestaky
    spec:
      imagePullSecrets:
        - name: instea-registry
      containers:
      - name: cestaky
        image: registry.instea.co/cestovne-prikazy:latest
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health-check
            port: 4100
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: "2"
            memory: "128Mi"
        volumeMounts:
          - name: cestaky-secret-volume
            mountPath: /opt/app/secrets
      volumes:
        - name: cestaky-secret-volume
          secret:
            secretName: cestaky-secrets
            items:
              - key: server-private-key
                path: key.pem

---
apiVersion: v1
kind: Service
metadata:
  name: cestaky-service
spec:
  selector:
    app: cestaky
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4100

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cestaky-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      - path: /cestaky/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cestaky-service
            port:
              number: 80
